--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,16 @@
 # --- For-Bot-Working --------- #
-pyrogram 
-TgCrypto 
+https://codeload.github.com/KurimuzonAkuma/pyrogram/zip/refs/heads/dev
+TgCrypto
 pyromod==1.5
-
 # --- For-Database ------------ #
-pymongo 
-dnspython 
-motor  # Async driver for MongoDB
-
+pymongo
+dnspython
 # --- For-Web-Response ------- #
-aiohttp 
-
-# --- Advance-Format --- #
-pyrofork
+aiohttp
+Flask==1.1.2
+gunicorn==20.1.0
+Jinja2==3.0.3
+werkzeug==2.0.2
+itsdangerous==2.0.1
+pytz
+requests
